--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "npm start",
-    "build": "ng build",
+    "build": "npm start",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
