--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/router": "^14.0.0-next.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^2.0.1",
+    "tailwindcss": "^3.2.1",
+    "typescript": "~4.7.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.0",
@@ -35,10 +39,6 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "postcss": "^8.4.18",
-    "tailwind-scrollbar": "^2.0.1",
-    "tailwindcss": "^3.2.1",
-    "typescript": "~4.7.2"
+    "karma-jasmine-html-reporter": "~2.0.0"
   }
 }
